tests/errors/math.gcd_expects_int.b
import math;

fn main() {
    result := math.gcd(1.5, 2.5);
}
